about section layout shift problem fixed

--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ html{
 #header{
     width: 100%;
     height: 100vh;
-    background-color: black;
+    background-color: #080808;
     position: relative;
 }
 
@@ -110,6 +110,7 @@ nav ul li a:hover::after{
 #about {
     padding: 45px 0;
     color: #f5f5f5;
+    min-height: 37rem;
 }
 
     
@@ -416,6 +417,9 @@ nav .fa-solid{
         position: absolute;
         bottom: 10%;
     }
+    #about{
+        min-height: 40rem;
+    }
 }
 
 @media only screen and (max-width:600px){
@@ -480,6 +484,7 @@ nav .fa-solid{
     }
     #about{
         border: 0;
+        min-height: 67rem;
     }
     .contact-left,.contact-right{
         flex-basis: 100%;
